Fix ToDoApp add new Task issue where button goes in top invisible.
Fix higth score apear in async way.
Remove comments.

--- a/src/App.css
+++ b/src/App.css
@@ -14,31 +14,15 @@
 
 body {
   background: var(--bg-color_2);
-  /* background-color: #7ceab1;  */
-  /* background: linear-gradient(
-    to bottom,
-    var(--bg-color) 30%,
-    var(--bg-color_2) 30%
-  ); */
   color: var(--text-color);
   height: 100vh;
   margin: 0;
 }
 
-/* #root {
-  background: linear-gradient(to bottom, #ea7c85 30%, rgb(43, 46, 140) 30%);
-} */
-
 #root {
-  /* max-width: 1280px; */
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  background: linear-gradient(
-    to bottom,
-    var(--bg-color) 30%,
-    var(--bg-color_2) 30%
-  );
 }
 
 .logo {
@@ -68,18 +52,12 @@ body {
 
 .content {
   /* Adjust based on the height of your navbar */
-  /* padding-top: 120px; */
-  /* margin-top: 120px; */
+  padding-top: 120px;
   display: flex;
-  /* Center horizontally */
-  /* justify-content: center; */
-  /* Align content to the top */
-  /* align-items: flex-start; */
-  /* Ensure it takes at least full height */
-  /* min-height: 100vh; */
-  margin-top: 60px; /* Adjust based on navbar height */
+  margin-top: 200px; /* Adjust based on navbar height */
   padding: 20px;
-  min-height: 100vh; /* Ensure content takes full height */
+  /* Ensure content takes full height */
+  min-height: 100vh;
   box-sizing: border-box; /* Prevent padding from breaking layout */
 }
 
@@ -90,7 +68,6 @@ body {
   font-size: x-large;
   border: solid darkblue 3px;
   border-radius: 1.3rem;
-  /* color: var(--text-color); */
 }
 
 .nav-bar-buttons a:hover {
@@ -103,9 +80,6 @@ body {
   display: inline-block;
   margin-left: 1rem;
   margin-right: 1rem;
-  /* columns: 3; */
-  /* column-gap: 10rem; */
-  /* background-color: rgb(209, 209, 209); */
 }
 
 .memoGameDiv {
@@ -134,27 +108,27 @@ button:hover {
   color: var(--text-color);
 }
 
+/*
+In : vite-js-project\src\components\ToDoApp\DoDoApp.tsx
+background-color is passed to TaskList.tsx as string of rgb values
+Example: bColor="226, 191, 191"
+*/
 .toDo {
   background-color: rgb(226, 191, 191);
 }
-
 .inProgress {
   background-color: rgb(209, 209, 209);
 }
-
-.Done {
+.done {
   background-color: rgb(180, 208, 186);
 }
 
 .todo-header {
-  display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
   padding: 10px 20px;
-  position: relative;
-  z-index: 1;
-  background: var(--bg-color);
+  position: absolute;
+  left: 20%;
 }
 
 @keyframes logo-spin {
